--- a/data/cities/gbarnga/two-brothers-business-center.yml
+++ b/data/cities/gbarnga/two-brothers-business-center.yml
@@ -1,11 +1,11 @@
-id: 5037211576
+id: 5037211796
 type: node
-latitude: 6.99757
-longitude: -9.47263
+latitude: 6.99883
+longitude: -9.47338
 postcode: ""
 city: Gbarnga
-street: Gbarnga Broad Street
+street: GST Road
 housenumber: ""
-phone: 0886556262 / 0886613525
+phone: "0886662470"
 opening_hours: Mo-Sa 08:00-18:00
 website: ""
