--- a/data/cities/gbarnga/two-brothers-business-center.yml
+++ b/data/cities/gbarnga/two-brothers-business-center.yml
@@ -1,11 +1,11 @@
-id: 5037211796
+id: 5037211576
 type: node
-latitude: 6.99883
-longitude: -9.47338
+latitude: 6.99757
+longitude: -9.47263
 postcode: ""
 city: Gbarnga
-street: GST Road
+street: Gbarnga Broad Street
 housenumber: ""
-phone: "0886662470"
+phone: 0886556262 / 0886613525
 opening_hours: Mo-Sa 08:00-18:00
 website: ""
